--- a/currencyhkd.html
+++ b/currencyhkd.html
@@ -2,7 +2,24 @@
 <head>
 </head>
 <body>
-  <script src="https://cdn.commoninja.com/sdk/latest/commonninja.js" defer></script>
-  <div class="commonninja_component pid-227db48c-2a69-4fc4-8593-9cc348a43eab"></div>
+  <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">Track all markets on TradingView</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js" async>
+  {
+  "symbol": "FX_IDC:HKDKRW",
+  "width": 350,
+  "height": 220,
+  "locale": "en",
+  "dateRange": "12M",
+  "colorTheme": "light",
+  "isTransparent": false,
+  "autosize": false,
+  "largeChartUrl": ""
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
 </body>
 </html>
